Style:Fixes overlapping texts

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -6,11 +6,7 @@ p, a, h1{
 h3, li, h4, h2{
     font-family: 'Roboto', sans-serif;
 }
-footer{
-    margin-top: -50px;
-}
 #welcome-text{
-    margin-top: -200px;
     font-family: 'Montserrat', sans-serif;
     font-size: 80px;
 }
